fix: second submenu layout issue

--- a/sass_files/_base.scss
+++ b/sass_files/_base.scss
@@ -63,7 +63,7 @@ h3{
     text-align:center;
 }
 h4 {
-    font-size: 2em;
+    font-size: 1.8em;
     text-align:center;
 }
 
